ccache news
===========

Unreleased 3.4
--------------

New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- The compiler option form `--sysroot arg` is now handled like the documented
  `--sysroot=arg` form.

- Added support for caching `.su` files generated by GCC flag `-fstack-usage`.


ccache 3.3.3
------------
Release date: 2016-10-26

Bug fixes
~~~~~~~~~

- ccache now detects usage of `.incbin` assembler directives in the source code
  and avoids caching such compilations.


ccache 3.3.2
------------
Release date: 2016-09-28

Bug fixes
~~~~~~~~~

- Fixed a regression in ccache 3.3 related to potentially bad content of
  dependency files when compiling identical source code but with different
  source paths.

- Fixed a regression in ccache 3.3.1: ccache could get confused when using the
  compiler option `-Wp,` to pass multiple options to the preprocessor,
  resulting in missing dependency files from direct mode cache hits.


ccache 3.3.1
------------
Release date: 2016-09-07

Bug fixes
~~~~~~~~~

- Fixed a problem in the ``multiple `-arch` options'' support introduced in
  3.3. When using the direct mode (the default), different combinations of
  `-arch` options were not detected properly.

- Fixed an issue when compiler option `-Wp,-MT,path` is used instead of `-MT
  path` (and similar for `-MF`, `-MP` and `-MQ`) and `run_second_cpp`
  (`CCACHE_CPP2`) is enabled.


ccache 3.3
----------
Release date: 2016-08-27

Notes
~~~~~

- A C99-compatible compiler is now required to build ccache.


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- The configuration option `run_second_cpp` (`CCACHE_CPP2`) now defaults to
  true. This improves ccache's out-of-the-box experience for compilers that
  can't compile their own preprocessed output with the same outcome as if they
  compiled the real source code directly, e.g. newer versions of GCC and Clang.

- The configuration option `hash_dir` (`CCACHE_HASHDIR`) now defaults to true.
