@@ -1,5 +1,5 @@
 // Copyright (C) 2002 Andrew Tridgell
-// Copyright (C) 2009-2016 Joel Rosdahl
+// Copyright (C) 2009-2017 Joel Rosdahl
 //
 // This program is free software; you can redistribute it and/or modify it
 // under the terms of the GNU General Public License as published by the Free
@@ -185,6 +185,19 @@ fatal(const char *format, ...)
 	fprintf(stderr, "ccache: error: %s\n", msg);
 
 	x_exit(1);
+}
+
+void
+warn(const char *format, ...)
+{
+	va_list ap;
+	va_start(ap, format);
+	char msg[1000];
+	vsnprintf(msg, sizeof(msg), format, ap);
+	va_end(ap);
+
+	cc_log("WARNING: %s", msg);
+	fprintf(stderr, "ccache: warning: %s\n", msg);
 }
 
 // Copy all data from fd_in to fd_out, decompressing data from fd_in if needed.
