@@ -12,6 +12,8 @@ New features and improvements
 
 - Added support for caching `.su` files generated by GCC flag `-fstack-usage`.
 
+- Configuration errors are now treated as warnings instead of fatal errors.
+
 
 ccache 3.3.3
 ------------
